--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Paulo Antunes Vieira Neto (42069), é candidato a Vereador nas Eleições Municipais de 2024.. Confira o santinho, resultados de votação e todos os dados do candidato no portal Diário Cidade!">
     <link rel="canonical"
-        href="https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/">
+        href="https://pauloantuns.github.io/candidatura/">
     <link rel="alternate" type="application/rss+xml" href="https://www.diariocidade.com/feed/">
     <meta property="fb:app_id" content="238405030929851">
     <meta property="og:locale" content="pt_BR">
@@ -18,22 +18,22 @@
     <meta property="og:description"
         content="Paulo Antunes Vieira Neto (42069), é candidato a Vereador nas Eleições Municipais de 2024.. Confira o santinho, resultados de votação e todos os dados do candidato no portal Diário Cidade!">
     <meta property="og:url"
-        content="https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/">
+        content="https://pauloantuns.github.io/candidatura/">
     <meta property="og:site_name" content="Diário Cidade">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description"
         content="Paulo Antunes Vieira Neto (42069), é candidato a Vereador nas Eleições Municipais de 2024.. Confira o santinho, resultados de votação e todos os dados do candidato no portal Diário Cidade!">
     <meta name="twitter:title" content="Paulo Antunes 42069 | Vereador | Cambuí (MG)">
     <meta property="og:image"
-        content="https://www.diariocidade.com/public/eleicoes/2020/mg/cambui/candidatos/vereador/andre-quirino-14666-santinho.jpg">
+        content="paulo-antunes-42069.png">
     <meta property="og:image:secure_url"
-        content="https://www.diariocidade.com/public/eleicoes/2020/mg/cambui/candidatos/vereador/andre-quirino-14666-santinho.jpg">
+        content="paulo-antunes-42069.png">
     <meta property="og:image:width" content="640">
     <meta property="og:image:height" content="360">
     <meta name="twitter:image"
-        content="https://www.diariocidade.com/public/eleicoes/2020/mg/cambui/candidatos/vereador/andre-quirino-14666-santinho.jpg">
+        content="paulo-antunes-42069.png">
     <link rel="amphtml"
-        href="https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/amp/">
+        href="https://pauloantuns.github.io/candidatura/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;600;700;900&display=swap"
@@ -62,7 +62,7 @@
     <script
         nonce="AvprIFs2CxLD6D0-00YASw">(function () { function signalGooglefcPresent() { if (!window.frames['googlefcPresent']) { if (document.body) { const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe); } else { setTimeout(signalGooglefcPresent, 0); } } } signalGooglefcPresent(); })();</script>
     <script
-        type="application/ld+json">[{"@context":"https://schema.org","@type":"Organization","name":"Diário Cidade","url":"https://www.diariocidade.com","logo":{"@type":"ImageObject","inLanguage":"pt-BR","url":"https://www.diariocidade.com/media/2022/02/17165327/logo-schema.png","contentUrl":"https://www.diariocidade.com/media/2022/02/17165327/logo-schema.png","width":"112","height":"112"},"sameAs":["https://news.google.com/publications/CAAqBwgKMPLxlwswk5uvAw?hl=pt-BR&gl=BR&ceid=BR%3Apt-419"]},{"@context":"https://schema.org","@type":"WebPage","name":"Paulo Antunes 42069 | Vereador | Cambuí (MG)","description":"Paulo Antunes Vieira Neto (42069), é candidato a Vereador nas Eleições Municipais de 2024.. Confira o santinho, resultados de votação e todos os dados do candidato no portal Diário Cidade!","url":"https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/","image":"https://www.diariocidade.com/public/eleicoes/2020/mg/cambui/candidatos/vereador/andre-quirino-14666-santinho.jpg"}]</script>
+        type="application/ld+json">[{"@context":"https://schema.org","@type":"Organization","name":"Diário Cidade","url":"https://www.diariocidade.com","logo":{"@type":"ImageObject","inLanguage":"pt-BR","url":"https://www.diariocidade.com/media/2022/02/17165327/logo-schema.png","contentUrl":"https://www.diariocidade.com/media/2022/02/17165327/logo-schema.png","width":"112","height":"112"},"sameAs":["https://news.google.com/publications/CAAqBwgKMPLxlwswk5uvAw?hl=pt-BR&gl=BR&ceid=BR%3Apt-419"]},{"@context":"https://schema.org","@type":"WebPage","name":"Paulo Antunes 42069 | Vereador | Cambuí (MG)","description":"Paulo Antunes Vieira Neto (42069), é candidato a Vereador nas Eleições Municipais de 2024.. Confira o santinho, resultados de votação e todos os dados do candidato no portal Diário Cidade!","url":"https://pauloantuns.github.io/candidatura/","image":"paulo-antunes-42069.png"}]</script>
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage" class="candidato">
@@ -181,9 +181,6 @@
                 <div class="row">
                     <div class="col-4 thumb-header">
                         <div class="thumb-container">
-                            <!-- <figure class="thumb"> <img class="lazy"
-                                    data-src="https://www.diariocidade.com/public/eleicoes/2020/mg/cambui/candidatos/vereador/andre-quirino-14666.jpg"
-                                    alt="Paulo Antunes ( 42069 ) [object Object] Cambuí "> </amp-img></figure> -->
                                 <figure class="thumb"> <img class="lazy"
                                     data-src="paulo-antunes-42069.jpg"
                                     alt="Paulo Antunes ( 42069 ) [object Object] Cambuí "> </amp-img></figure>
@@ -342,7 +339,7 @@
                             <section class="comp-sharer flex flex-center"> <span>Compartilhe:</span>
                                 <ul class="reset list-sharer">
                                     <li class="item"> <a class="share-item facebook" target="_blank"
-                                            href="https://www.facebook.com/sharer/sharer.php?u=https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/"
+                                            href="https://www.facebook.com/sharer/sharer.php?u=https://pauloantuns.github.io/candidatura/"
                                             title="Compartilhe no Facebook"> <svg height="30" width="30"
                                                 viewBox="0 0 112.196 112.196">
                                                 <circle fill="#3B5998" cx="56.098" cy="56.098" r="56.098" />
@@ -350,7 +347,7 @@
                                                     d="M70.201,58.294h-10.01v36.672H45.025V58.294h-7.213V45.406h7.213v-8.34c0-5.964,2.833-15.303,15.301-15.303L71.56,21.81v12.51h-8.151c-1.337,0-3.217,0.668-3.217,3.513v7.585h11.334L70.201,58.294z" />
                                             </svg> </a> </li>
                                     <li class="item"> <a class="share-item twitter" target="_blank"
-                                            href="https://x.com/share?url=https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/"
+                                            href="https://x.com/share?url=https://pauloantuns.github.io/candidatura/"
                                             title="Compartilhe no X"> <svg height="30" width="30" viewBox="0 0 24 24">
                                                 <polygon
                                                     points="6.861 6.159 15.737 17.764 17.097 17.764 8.322 6.159 6.861 6.159" />
@@ -358,7 +355,7 @@
                                                     d="m12,0C5.373,0,0,5.373,0,12s5.373,12,12,12,12-5.373,12-12S18.627,0,12,0Zm3.063,19.232l-3.87-5.055-4.422,5.055h-2.458l5.733-6.554-6.046-7.91h5.062l3.494,4.621,4.043-4.621h2.455l-5.361,6.126,6.307,8.337h-4.937Z" />
                                             </svg> </a> </li>
                                     <li class="item"> <a class="share-item whats share-mobile" target="_blank"
-                                            href="whatsapp://send?text=%20Paulo Antunes 42069 | Vereador | Cambuí (MG): https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/"
+                                            href="whatsapp://send?text=%20Vote Paulo Antunes 42069 | Vereador | Cambuí (MG): https://pauloantuns.github.io/candidatura/"
                                             title="Compartilhe no Whatsapp"> <svg height="30" width="30"
                                                 viewBox="0 0 512 512">
                                                 <path fill="#4CAF50"
@@ -367,7 +364,7 @@
                                                     d="M405.024,361.504c-6.176,17.44-30.688,31.904-50.24,36.128c-13.376,2.848-30.848,5.12-89.664-19.264C189.888,347.2,141.44,270.752,137.664,265.792c-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624,26.176-62.304c6.176-6.304,16.384-9.184,26.176-9.184c3.168,0,6.016,0.16,8.576,0.288c7.52,0.32,11.296,0.768,16.256,12.64c6.176,14.88,21.216,51.616,23.008,55.392c1.824,3.776,3.648,8.896,1.088,13.856c-2.4,5.12-4.512,7.392-8.288,11.744c-3.776,4.352-7.36,7.68-11.136,12.352c-3.456,4.064-7.36,8.416-3.008,15.936c4.352,7.36,19.392,31.904,41.536,51.616c28.576,25.44,51.744,33.568,60.032,37.024c6.176,2.56,13.536,1.952,18.048-2.848c5.728-6.176,12.8-16.416,20-26.496c5.12-7.232,11.584-8.128,18.368-5.568c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736C411.2,329.152,411.2,344.032,405.024,361.504z" />
                                             </svg> </a> <a class="share-item whats share-desktop" target="_blank"
                                             target="_blank"
-                                            href="https://web.whatsapp.com/send?text=%20Paulo Antunes 42069 | Vereador | Cambuí (MG): https://www.diariocidade.com/mg/cambui/eleicoes/2020/candidatos/vereador/andre-quirino-14666/"
+                                            href="https://web.whatsapp.com/send?text=%20Vote Paulo Antunes 42069 | Vereador | Cambuí (MG): https://pauloantuns.github.io/candidatura/"
                                             title="Compartilhe no Whatsapp"> <svg height="30" width="30"
                                                 viewBox="0 0 512 512">
                                                 <path fill="#4CAF50"
