--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         content="Paulo Antunes Vieira Neto (42069), é candidato a Vereador nas Eleições Municipais de 2024.. Confira o santinho, resultados de votação e todos os dados do candidato no portal Diário Cidade!">
     <meta name="twitter:title" content="Paulo Antunes 42069 | Vereador | Cambuí (MG)">
     <meta property="og:image"
-        content="paulo-antunes-42069.png">
+        content="paulo-antunes-42069-santinho.png">
     <meta property="og:image:secure_url"
-        content="paulo-antunes-42069.png">
+        content="paulo-antunes-42069-santinho.png">
     <meta property="og:image:width" content="640">
     <meta property="og:image:height" content="360">
     <meta name="twitter:image"
-        content="paulo-antunes-42069.png">
+        content="paulo-antunes-42069-santinho.png">
     <link rel="amphtml"
         href="https://pauloantuns.github.io/candidatura/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
