--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                         d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                 </svg> </button> </div>
         <ul class="reset lista-items-menu">
-            <li class="item"><a href="/">Últimas Notícias</a></li>
-            <li class="item"><a href="/eleicoes/2024/">Eleições 2024</a></li>
-            <li class="item"><a href="/guia/">Guia de empresas</a></li>
-            <li class="item"><a href="/loterias/">Loterias</a></li>
-            <li class="item"><a href="/cep/">Guia de CEPs</a></li>
-            <li class="item"><a href="/cartorios/">Guia de cartórios</a></li>
+            <li class="item"><a href="https://www.diariocidade.com/">Últimas Notícias</a></li>
+            <li class="item"><a href="https://www.diariocidade.com//eleicoes/2024/">Eleições 2024</a></li>
+            <li class="item"><a href="https://www.diariocidade.com//guia/">Guia de empresas</a></li>
+            <li class="item"><a href="https://www.diariocidade.com//loterias/">Loterias</a></li>
+            <li class="item"><a href="https://www.diariocidade.com//cep/">Guia de CEPs</a></li>
+            <li class="item"><a href="https://www.diariocidade.com//cartorios/">Guia de cartórios</a></li>
         </ul>
     </section>
     <div id="search-lightbox" class="std-version">
