--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 </svg> </button> </div>
         <ul class="reset lista-items-menu">
             <li class="item"><a href="https://www.diariocidade.com/">Últimas Notícias</a></li>
-            <li class="item"><a href="https://www.diariocidade.com//eleicoes/2024/">Eleições 2024</a></li>
-            <li class="item"><a href="https://www.diariocidade.com//guia/">Guia de empresas</a></li>
-            <li class="item"><a href="https://www.diariocidade.com//loterias/">Loterias</a></li>
-            <li class="item"><a href="https://www.diariocidade.com//cep/">Guia de CEPs</a></li>
-            <li class="item"><a href="https://www.diariocidade.com//cartorios/">Guia de cartórios</a></li>
+            <li class="item"><a href="https://www.diariocidade.com/eleicoes/2024/">Eleições 2024</a></li>
+            <li class="item"><a href="https://www.diariocidade.com/guia/">Guia de empresas</a></li>
+            <li class="item"><a href="https://www.diariocidade.com/loterias/">Loterias</a></li>
+            <li class="item"><a href="https://www.diariocidade.com/cep/">Guia de CEPs</a></li>
+            <li class="item"><a href="https://www.diariocidade.com/cartorios/">Guia de cartórios</a></li>
         </ul>
     </section>
     <div id="search-lightbox" class="std-version">
@@ -136,12 +136,12 @@
             <div class="nav nav-right">
                 <nav class="menu-header-dc">
                     <ul class="reset lista-items-menu">
-                        <li class="item"><a href="/">Últimas Notícias</a></li>
-                        <li class="item"><a href="/eleicoes/2024/">Eleições 2024</a></li>
-                        <li class="item"><a href="/guia/">Guia de empresas</a></li>
-                        <li class="item"><a href="/loterias/">Loterias</a></li>
-                        <li class="item"><a href="/cep/">Guia de CEPs</a></li>
-                        <li class="item"><a href="/cartorios/">Guia de cartórios</a></li>
+                        <li class="item"><a href="https://www.diariocidade.com/">Últimas Notícias</a></li>
+                        <li class="item"><a href="https://www.diariocidade.com/eleicoes/2024/">Eleições 2024</a></li>
+                        <li class="item"><a href="https://www.diariocidade.com/guia/">Guia de empresas</a></li>
+                        <li class="item"><a href="https://www.diariocidade.com/loterias/">Loterias</a></li>
+                        <li class="item"><a href="https://www.diariocidade.com/cep/">Guia de CEPs</a></li>
+                        <li class="item"><a href="https://www.diariocidade.com/cartorios/">Guia de cartórios</a></li>
                     </ul>
                 </nav> <button class="btn-search"> <svg class="search-icon" fill="#000" height="19" width="19" x="0px"
                         y="0px" viewBox="0 0 56.966 56.966">
@@ -660,12 +660,12 @@
                 <div class="column col-6 col-sm-3">
                     <h2 class="title h6">Guia de Cartórios</h2>
                     <ul class="reset lista-links">
-                        <li><a href="/cartorios/estado-sao-paulo/">São Paulo</a></li>
-                        <li><a href="/cartorios/estado-rio-de-janeiro/">Rio de Janeiro</a></li>
-                        <li><a href="/cartorios/estado-minas-gerais/">Minas Gerais</a></li>
-                        <li><a href="/cartorios/estado-bahia/">Bahia</a></li>
-                        <li><a href="/cartorios/estado-rio-grande-do-sul/">Rio Grande do Sul</a></li>
-                        <li><a href="/cartorios/">Todos os estados</a></li>
+                        <li><a href="https://www.diariocidade.com/cartorios/estado-sao-paulo/">São Paulo</a></li>
+                        <li><a href="https://www.diariocidade.com/cartorios/estado-rio-de-janeiro/">Rio de Janeiro</a></li>
+                        <li><a href="https://www.diariocidade.com/cartorios/estado-minas-gerais/">Minas Gerais</a></li>
+                        <li><a href="https://www.diariocidade.com/cartorios/estado-bahia/">Bahia</a></li>
+                        <li><a href="https://www.diariocidade.com/cartorios/estado-rio-grande-do-sul/">Rio Grande do Sul</a></li>
+                        <li><a href="https://www.diariocidade.com/cartorios/">Todos os estados</a></li>
                     </ul>
                 </div>
                 <div class="column col-6 col-sm-3">
@@ -682,7 +682,7 @@
                 <div class="column col-6 col-sm-3">
                     <h2 class="title h6">Loterias</h2>
                     <ul class="reset lista-links">
-                        <li><a href="/loterias/">Resultados das Loterias</a></li>
+                        <li><a href="https://www.diariocidade.com/loterias/">Resultados das Loterias</a></li>
                         <li><a href="http://diariocidade.com/loterias/como-apostar-na-mega-sena-pela-internet/">Como
                                 apostar</a></li>
                     </ul>
