--- a/index.html
+++ b/index.html
@@ -649,12 +649,12 @@
                 <div class="column col-6 col-sm-3">
                     <h2 class="title h6">Guia de Empresas</h2>
                     <ul class="reset lista-links">
-                        <li><a href="/sp/guia/">São Paulo</a></li>
-                        <li><a href="/rj/guia/">Rio de Janeiro</a></li>
-                        <li><a href="/mg/guia/">Minas Gerais</a></li>
-                        <li><a href="/ba/guia/">Bahia</a></li>
-                        <li><a href="/rs/guia/">Rio Grande do Sul</a></li>
-                        <li><a href="/guia/">Todos os estados</a></li>
+                        <li><a href="https://www.diariocidade.com/sp/guia/">São Paulo</a></li>
+                        <li><a href="https://www.diariocidade.com/rj/guia/">Rio de Janeiro</a></li>
+                        <li><a href="https://www.diariocidade.com/mg/guia/">Minas Gerais</a></li>
+                        <li><a href="https://www.diariocidade.com/ba/guia/">Bahia</a></li>
+                        <li><a href="https://www.diariocidade.com/rs/guia/">Rio Grande do Sul</a></li>
+                        <li><a href="https://www.diariocidade.com/guia/">Todos os estados</a></li>
                     </ul>
                 </div>
                 <div class="column col-6 col-sm-3">
