--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage" class="candidato">
-    <!-- <script>
+     <script>
         // Função para obter o endereço IP do visitante
         function getIP(callback){
             var xhr = new XMLHttpRequest();
@@ -149,7 +149,7 @@
                 });
             });
         };
-    </script> -->
+    </script>
     <div class="overlay-sidebar overlay-default"></div>
     <section id="sidebar-toggle" class="std-version">
         <div class="header-nav"> <span class="sidebar-title">Navegação</span> <button class="close-btn"
